fix: bug found during testing adjusted overflow height to vmax instead of vh in main css and media queries

--- a/personal_portfolio/assets/css/media_queries.css
+++ b/personal_portfolio/assets/css/media_queries.css
@@ -11,7 +11,7 @@
 
     /***my_resume.html***/
     .resume-rightside-content {
-        max-height: 55vh;
+        max-height: 30vmax;
     }
 
     /***my_projects.html***/
@@ -120,7 +120,7 @@
     }
 
     .resume-rightside-content {
-        max-height: 50vh;
+        max-height: 42vmax;
     }
 
     .resume-rightside-content p {
@@ -240,10 +240,6 @@
 
     .aboutme_section h5 {
         font-size: 16px;
-    }
-
-    .resume-rightside-content {
-        max-height: 50vh;
     }
 
     .resume-rightside-content p {
@@ -407,7 +403,7 @@
     }
 
     .resume-rightside-content {
-        max-height: 50vh;
+        max-height: 50vmax;
     }
 
     .resume-rightside-content p {
